add quiz result and user attempts and post to firebase

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.QuizzPartner"
         tools:targetApi="31">
         <activity
+            android:name=".ui.QuizResultActivity"
+            android:exported="false" />
+        <activity
             android:name=".ui.QuizActivity"
             android:exported="false" />
         <activity
