--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,10 @@
         android:theme="@style/Theme.QuizzPartner"
         tools:targetApi="31">
         <activity
+            android:name=".ui.BottomNavigationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_bottom_navigation" />
+        <activity
             android:name=".ui.QuizRandomActivity"
             android:exported="false" />
         <activity
@@ -49,10 +53,11 @@
             android:exported="false" />
         <activity
             android:name=".ui.MainActivity"
-            android:theme="@style/Theme.CustomSplashScreenTheme"
-            android:exported="true">
+            android:exported="true"
+            android:theme="@style/Theme.CustomSplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
